log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Sun May 17 11:08:37 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:47: error: invalid use of void expression
   52 |     MapPair* aux = map_search(g->adjacencyMap,(void)label1);
      |                                               ^~~~~~~~~~~~
graph.c:54:19: error: invalid initializer
   54 |     Edge prueba = list_first(aux->value);
      |                   ^~~~~~~~~~
graph.c:55:18: error: invalid operands to binary != (have ‘Edge’ and ‘void *’)
   55 |     while(prueba != NULL){
      |                  ^~
graph.c:56:34: error: invalid type argument of ‘->’ (have ‘Edge’)
   56 |         if(is_equal_string(prueba->target,(void* )label2)) return prueba->weight;
      |                                  ^~
graph.c:56:73: error: invalid type argument of ‘->’ (have ‘Edge’)
   56 |         if(is_equal_string(prueba->target,(void* )label2)) return prueba->weight;
      |                                                                         ^~
graph.c:57:18: error: incompatible types when assigning to type ‘Edge’ from type ‘void *’
   57 |         prueba = list_next(aux->value);
      |                  ^~~~~~~~~
c68ac87
Sun May 17 11:11:31 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
========================================
516cfac
Sun May 17 11:20:51 PM UTC 2026: 
 graph.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:43:19: error: assignment discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   43 |     nuevo->target = dest;
      |                   ^
cc1: all warnings being treated as errors
58229f2
Sun May 17 11:26:04 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
58a35d1
Sun May 17 11:33:40 PM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
========================================
d9520ea
Sun May 17 11:35:37 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:52:55: error: ‘src’ undeclared (first use in this function)
   52 |     MapPair* aux = map_search(g->adjacencyMap, (void*)src);
      |                                                       ^~~
graph.c:52:55: note: each undeclared identifier is reported only once for each function it appears in
51c8474
Sun May 17 11:35:55 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
========================================
b1ce30f
Sun May 17 11:41:33 PM UTC 2026: 
 graph.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:34: error: ‘is_equal_sring’ undeclared (first use in this function); did you mean ‘is_equal_string’?
   32 |     g->adjacencyMap = map_create(is_equal_sring);
      |                                  ^~~~~~~~~~~~~~
      |                                  is_equal_string
graph.c:32:34: note: each undeclared identifier is reported only once for each function it appears in
8a9ea74
Sun May 17 11:42:02 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2d39381
Sun May 17 11:51:13 PM UTC 2026: 
 graph.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:31: error: passing argument 1 of ‘map_search’ from incompatible pointer type [-Wincompatible-pointer-types]
   40 |     MapPair* aux = map_search(g,(void*)label);
      |                               ^
      |                               |
      |                               Graph *
In file included from graph.c:8:
map.h:22:26: note: expected ‘Map *’ but argument is of type ‘Graph *’
   22 | MapPair *map_search(Map *map, void *key);
      |                     ~~~~~^~~
188d36a
